upload protocol mbed

--- a/Farbdisplay/platformio.ini
+++ b/Farbdisplay/platformio.ini
@@ -12,5 +12,5 @@
 platform = ststm32
 board = nucleo_l152re
 framework = arduino
-upload_protocol = stlink
+upload_protocol = mbed
 monitor_speed = 115200
