--- a/Farbdisplay/platformio.ini
+++ b/Farbdisplay/platformio.ini
@@ -14,3 +14,6 @@ board = nucleo_l152re
 framework = arduino
 upload_protocol = mbed
 monitor_speed = 115200
+lib_deps = 
+	adafruit/Adafruit GFX Library@^1.12.4
+	adafruit/Adafruit ILI9341@^1.6.2
