--- a/Farbdisplay/platformio.ini
+++ b/Farbdisplay/platformio.ini
@@ -17,3 +17,4 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.12.4
 	adafruit/Adafruit ILI9341@^1.6.2
+	paulstoffregen/XPT2046_Touchscreen@0.0.0-alpha+sha.26b691b2c8
